[package]
name = "netprobe"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
surge-ping = "0.8"
hickory-resolver = "0.25"
socket2 = { version = "0.6", features = ["all"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1"
x509-parser = "0.18"
trippy-core = "0.13"
trippy-privilege = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.59"

[dev-dependencies]
tempfile = "3"
